k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: order-service

  template:

    metadata:
      labels:
        app: order-service

    spec:

      containers:

      - name: order-service

        image: IMAGE_PLACEHOLDER

        ports:
        - containerPort: 5000
``
