k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-service
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      imagePullSecrets:
        - name: ecr-secret

      containers:
        - name: product-service
          image: PRODUCT_IMAGE

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          ports:
            - containerPort: 5000
