k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: user-service

  template:

    metadata:
      labels:
        app: user-service

    spec:

      containers:

      - name: user-service

        image: USER_IMAGE

        ports:
        - containerPort: 5000
``
