k8s/order-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service

spec:

  selector:
    app: order-service

  ports:

  - port: 80
    targetPort: 5000
