k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: microservices-ingress
  namespace: microservices

spec:

  ingressClassName: nginx

  rules:

  - http:

      paths:

      - path: /users
        pathType: Prefix

        backend:
          service:
            name: user-service

            port:
              number: 80

      - path: /products
        pathType: Prefix

        backend:
          service:
            name: product-service

            port:
              number: 80

      - path: /orders
        pathType: Prefix

        backend:
          service:
            name: order-service

            port:
              number: 80
